--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -26,7 +26,9 @@
 .menu-section {
     display: flex;
     align-items: center;
+    margin-left: auto; /* Pousse les éléments vers la gauche */
 }
+
 
 .icon {
     font-size: 24px;
